pathfinder/compiler/parser/Tests/bad-010.xq
(: quotes don't have a (: special :) meaning in comments :) foo'
